# setuptools-declarative-requirements

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml  testing.yml
declarative_requirements/: __init__.py  integration.py
requirements/: tests.in
requirements/py3.10/: tests.txt
requirements/py3.5/: tests.txt
requirements/py3.6/: tests.txt
requirements/py3.7/: tests.txt
requirements/py3.8/: tests.txt
requirements/py3.9/: tests.txt
tests/: conftest.py
tests/integration/: test_requirements_parse.py
