[metadata]
name = setuptools-declarative-requirements
description = File support for setuptools declarative setup.cfg
long_description = file: README.md
long_description_content_type = text/markdown
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = https://github.com/s0undt3ch/setuptools-declarative-requirements
project_urls =
    Source=https://github.com/s0undt3ch/setuptools-declarative-requirements
    Tracker=https://github.com/s0undt3ch/setuptools-declarative-requirements/issues
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.5
setup_requires =
  setuptools_scm[toml]>=3.4
install_requires =
  setuptools

[options.packages.find]
exclude =
  tests*

[options.entry_points]
setuptools.finalize_distribution_options=
   setuptools_declarative_requirements = declarative_requirements.integration:patch_parse_config_files

[bdist_wheel]
universal = 0

[mypy]
mypy_path = src
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True

[flake8]
max-line-length = 89
